--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,10 +6,10 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <div id="combwine-logo-container">
+    <div class="combwine-logo-container">
       <svg class="combwine-logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 428.1 402.9" enable-background="new 0 0 428.1 402.9" xml:space="preserve">
-        <path fill="#631F3A" d="M67.1,32.7c-5.3,15.2-11.4,30.1-15.6,45.6c-16.1,58.2-7.1,112.2,29.1,160.8c13.1,17.6,31,30,50,40.8
+       viewBox="0 0 428.1 402.9">
+        <path d="M67.1,32.7c-5.3,15.2-11.4,30.1-15.6,45.6c-16.1,58.2-7.1,112.2,29.1,160.8c13.1,17.6,31,30,50,40.8
             c22.3,12.7,46.2,19.3,72.1,17.2c22-1.8,43.1-6.4,61.1-20c15-11.3,22-26.6,22.4-45.2c0.1-3,0.1-6,0-9c-0.5-9.1-3.7-16.6-11.3-22.2
             c-8-6-17-9.1-26.6-10.5c-7.2-1-13.8,0.7-18.7,7c-4.3,5.5-9.8,9.5-17.2,9.7c-5,0.1-7.5-2.5-6.8-7.4c0.3-2.4,1.3-4.8,2.4-7
             c5.1-10.8,10.4-21.5,15.6-32.3c1.7-3.6,3.4-7.2,5-10.9c2.7-6.3,2.6-12.2-1.9-17.7c-4.1-5-8.2-10.1-12-15.3
