--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,9 +1,9 @@
 <ion-modal-view>
   <ion-header-bar>
     <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
+    <!--<div class="buttons">-->
+      <!--<button class="button button-clear" ng-click="closeLogin()">Close</button>-->
+    <!--</div>-->
   </ion-header-bar>
   <ion-content>
     <div class="combwine-logo-container">
