--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -20,6 +20,9 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item menu-close href="#/app/navigate">
+          Naviga
+        </ion-item>
         <ion-item menu-close href="#/app/search">
           Trova vino
         </ion-item>
@@ -32,8 +35,8 @@
         <ion-item menu-close href="#/app/profile">
           Profilo
         </ion-item>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item menu-close ng-click="doLogout()">
+          Logout
         </ion-item>
       </ion-list>
     </ion-content>
