--- a/www/templates/navigate.html
+++ b/www/templates/navigate.html
@@ -3,6 +3,25 @@
         <p class="menu-title">NAVIGA</p>
     </ion-nav-title>
     <ion-content>
-        <h1>Browse</h1>
+        <ion-list>
+            <ion-item>
+                <div class="navigate-item">
+                    <img class="navigate-image" src="./img/territorio.jpg"/>
+                    <h2>Territorio</h2>
+                </div>
+            </ion-item>
+            <ion-item>
+                <div class="navigate-item">
+                    <img class="navigate-image" src="./img/occasione.jpg"/>
+                    <h2>Occasione</h2>
+                </div>
+            </ion-item>
+            <ion-item>
+                <div class="navigate-item">
+                    <img class="navigate-image" src="./img/accoppiamento.jpg"/>
+                    <h2>Abbinamento</h2>
+                </div>
+            </ion-item>
+        </ion-list>
     </ion-content>
 </ion-view>
